Add mobile household switching
